// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserGroup /> should render with [toggled=false] 1`] = `
<Group__Groups
  className="text-capitalize"
  onClick={[Function]}
>
  bob
  <Checkbox
    checked={false}
    partial={false}
    pullRight={true}
  />
</Group__Groups>
`;

exports[`<UserGroup /> should render with [toggled=true] 1`] = `
<Group__Groups
  className="text-capitalize"
  onClick={[Function]}
>
  bob
  <Checkbox
    checked={true}
    partial={false}
    pullRight={true}
  />
</Group__Groups>
`;
